--- a/src/bivme/configs/config.toml
+++ b/src/bivme/configs/config.toml
@@ -80,7 +80,7 @@ option = "default"
 # Default: "default"
 
 correct_mode = "adaptive"
-# Define whether you would like to manually review and correct view predictions. "adaptive" is generally recommended, but "automatic" is the default for the example.
+# Define whether you would like to manually review and correct view predictions. "adaptive" is generally recommended to avoid downstream errors.
 # * "manual": will launch a GUI after completing view predictions to allow you to correct any mispredictions
 # * "adaptive": will only launch a GUI if there are any poor predictions or missing views
 # * "automatic": will not launch the GUI and will use the predictions as they are with no interruption
